# fira

./: Cargo.toml  README.md  jira-mcp.skill
jira-mcp/: SKILL.md
src/: cli.rs  config.rs  git.rs  main.rs
src/jira/: client.rs  mod.rs  models.rs
src/tui/: app.rs  mod.rs
src/tui/views/: create_ticket.rs  filter_panel.rs  help.rs  mod.rs  settings.rs  templates_panel.rs  ticket_detail.rs  ticket_list.rs  transition_picker.rs
